# batikam

./: .gitignore  INSTALL.md  INSTALL_SIMPLE.md  PYTHON_VERSION_FIX.md  QUICKSTART.md  README.md  company_info.json  devis_2026-0001.docx  devis_2026-000112.docx  devis_2026-0001NNNN.docx  devis_2026-0001PPPPPPPPP.docx  devis_2026-0001VVCCCBB.docx  devis_2026-0001azazzaazazaz.docx  devis_2026-0001cxcxcx.docx  devis_2026-0001dzdzdzdzdz.docx  devis_2026-0001sqsqsq.docx  devis_2026-0001vbvbvvgvgft.docx  devis_2026-0004dsssdds.docx  devis_2026-0004dzdz.docx  devis_2026-0005aaaaa.docx  devis_2026-0005fttffftfttftftftf.docx  devis_2026-0005vbvbvb.docx  facture_2026-0002.docx  facture_FAC-2026-0004.docx  install_deps.sh  pyproject.toml  requirements.txt  requirements_python314.txt  run.sh  setup.sh
.github/workflows/: build-windows.yml
app/: __init__.py  __main__.py  main.py
app/models/: __init__.py  devis.py
app/services/: __init__.py  branding.py  calc.py  company_info.py  document_theme.py  export_docx.py  export_pdf.py  numbering.py  paths.py  storage_sqlite.py
app/ui/: __init__.py  client_dialog.py  depense_dialog.py  devis_dialog.py  devis_editor.py  facture_dialog.py  feedback.py  ligne_dialog.py  lot_dialog.py  main_window.py  splash.py  theme.py  theme.qss
assets/: README.md
scripts/: build_windows.bat  build_windows.ps1  installer.iss
templates/: README.md  devis_template.docx
tests/: __init__.py  test_calc.py  test_models.py
