[project]
name = "batikam-renove"
version = "1.0.0"
description = "Application desktop pour la gestion des devis Batikam Rénove"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "reportlab>=4.0.0",
    "docxtpl>=0.16.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
